--- a/.github/workflows/mywrkflowtest.yml
+++ b/.github/workflows/mywrkflowtest.yml
@@ -31,6 +31,9 @@ jobs:
     name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
     steps:
+      - name: Print name
+        run: echo "Hello ${{ env.DOCKER_USERNAME }}"
+
       - name: Check out the repo
         uses: actions/checkout@v3
 
