--- a/.github/workflows/mywrkflowtest.yml
+++ b/.github/workflows/mywrkflowtest.yml
@@ -32,7 +32,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Print name
-        run: echo "Hello ${{ env.DOCKER_USERNAME }}"
+        run: echo "Hello ${{ vars.DOCKER_USERNAME }}"
 
       - name: Check out the repo
         uses: actions/checkout@v3
@@ -43,8 +43,8 @@ jobs:
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{ env.DOCKER_USERNAME }}
-          password: ${{ env.DOCKER_TOKEN }}
+          username: ${{ vars.DOCKER_USERNAME }}
+          password: ${{ vars.DOCKER_TOKEN }}
 
       - name: Extract metadata (tags, labels) for Docker
         id: meta
