--- a/.github/workflows/mywrkflowtest.yml
+++ b/.github/workflows/mywrkflowtest.yml
@@ -30,7 +30,7 @@ jobs:
   push_to_registry:
     name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
-    envorinement:
+    environement:
       name: production
     steps:
       - name: Print vars
